# EXIF-Clone

./: .flake8  .gitignore  EXIF-Clone.spec  LICENSE  README.md  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: build-release.yml  test-dev-branch.yml
__tests__/: README.md  TEST_SUMMARY.md  run_tests.py  test.sh
__tests__/integration/: test_workflow.py
__tests__/unit/: test_libs_main.py
src/: app.py
src/libs/: main.py
src/ui/: main.py
