[project]
name = "exif-clone"
version = "0.1.0"
description = "GPS EXIF metadata transfer tool with GUI"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
dependencies = [
    "customtkinter>=5.2.2",
    "piexif>=1.1.3",
    "pillow>=12.1.0",
    "pillow-heif>=1.1.1",
    "pyinstaller[dev]>=6.17.0",
]
